--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,8 @@ defaults: &defaults
   adapter: postgresql
 
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: db/development
   pool: 5
   timeout: 5000
 
@@ -17,14 +17,14 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: db/test
 
   pool: 5
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: db/production
   pool: 5
   timeout: 5000
