--- a/config/database.yml
+++ b/config/database.yml
@@ -14,3 +14,35 @@ development:
 test: &test
   <<: *defaults
   database: value_test
+
+
+# defaults: &defaults
+#   encoding: utf-8
+#   username: laurenceberry
+#   password:
+#   pool: 5
+#   host: 127.0.0.1
+#   reconnect: true
+#   adapter: postgresql
+
+# development:
+#   adapter: postgresql
+#   database: db/development
+#   pool: 5
+#   timeout: 5000
+
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
+#   adapter: postgresql
+#   database: db/test
+
+#   pool: 5
+#   timeout: 5000
+
+# production:
+#   adapter: postgresql
+#   database: db/production
+#   pool: 5
+#   timeout: 5000
